--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ project.ext {
     slf4jVersion = '1.7.16'
     awsSdkVersion = '1.11.759'
 
-    hadoopAwsVersion = '2.8.5'
+    apacheCommonsVersion = '1.20'
 
     okHttpVersion = '4.9.1'
     jUnitVersion = '5.7.0'
@@ -41,8 +41,7 @@ dependencies {
     implementation group: 'org.apache.spark', name: 'spark-sql_2.12', version: sparkVersion
     implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: awsSdkVersion
     implementation group: 'com.amazonaws', name: 'aws-java-sdk-core', version: awsSdkVersion
-    implementation group: 'org.apache.hadoop', name: 'hadoop-aws', version: hadoopAwsVersion
-    implementation group: 'org.apache.hadoop', name: 'hadoop-hdfs-httpfs', version: hadoopAwsVersion
+    implementation group: 'org.apache.commons', name: 'commons-compress', version: apacheCommonsVersion
 
     includeJar(platform("com.squareup.okhttp3:okhttp-bom:${okHttpVersion}"))
     includeJar group: 'com.squareup.okhttp3', name: 'okhttp'
